# yt-summarizer

./: .gitignore  .pre-commit-config.yaml  .trivyignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: janitor.agent.md  principal-software-engineer.agent.md
.github/instructions/: code-review-generic.instructions.md  makefile.instructions.md  shell.instructions.md
.github/linters/: .isort.cfg  .markdown-lint.yml  .ruff.toml  .yaml-lint.yml
.github/skills/documentation-writer/: SKILL.md
.github/skills/review-and-refactor/: SKILL.md
.github/workflows/: build.yml  docs.yml  linter.yml  update.yml
ci/: update_versions.sh
deploy/: k8s.yml
docs/: _config.yml  index.md
docs/explanation/: summary-samples.md  workflow.md
docs/how-to/: running-application.md
src/yt_summarizer/: __init__.py  llm.py  model.py  notion.py  service.py  youtube.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_llm.py  test_model.py  test_notion.py  test_service.py  test_youtube.py
